--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
                 velit mollit</p>
         </div>
     </section>
+    <section>
+        <div class="helf-with">
+            <img src="images/donation0.jpg" alt="">
+        </div>
+        <div class="helf-with">
+            <h2>Their lives depend on your donation</h2>
+            <p>To help remind your team and community of supporters of your positive impact, we scoured the web for top giving quotes that are sure to inspire. From Aesop to Mohammad Ali and Anne Frank, these words have the power to re-energize your community and spark action. <a style="color: blue; font-size: 20px; " target="_blank" href="https://www.linkedin.com/in/shorif-khan-399797243/">read more.....</a></p>
+            
+        </div>
+    </section>
 
 </body>
 <footer class="footer">
